--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -22,11 +22,44 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 C:\Users\User\Documents\BM_repo\BM_fw\MDK-ARM\BM_fw.uvprojx
-Project File Date:  09/19/2018
+Project File Date:  09/26/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BM_fw'
+assembling startup_stm32f767xx.s...
+compiling bsp_driver_sd.c...
+compiling main.c...
+compiling sd_diskio.c...
+compiling fatfs.c...
+compiling stm32f7xx_it.c...
+compiling stm32f7xx_hal_msp.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_ll_sdmmc.c...
+compiling stm32f7xx_hal_sd.c...
+compiling stm32f7xx_hal_spi.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling stm32f7xx_hal_i2c.c...
+compiling system_stm32f7xx.c...
+compiling syscall.c...
+compiling diskio.c...
+compiling ff.c...
+compiling ff_gen_drv.c...
+linking...
+Program Size: Code=18260 RO-data=736 RW-data=44 ZI-data=193524  
+FromELF: creating hex file...
 "BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -50,7 +83,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:02:17
 </pre>
 </body>
 </html>
