--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -27,6 +27,11 @@ Project File Date:  11/04/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BM_fw'
+compiling usbd_audio.c...
+compiling stm32f7xx_it.c...
+linking...
+Program Size: Code=28460 RO-data=736 RW-data=324 ZI-data=288268  
+FromELF: creating hex file...
 "BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -50,7 +55,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
