--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.21.0.0
  
 <h2>Project:</h2>
 C:\Users\Alexandros\Documents\GitHub\BM_repo\BM_fw\MDK-ARM\BM_fw.uvprojx
-Project File Date:  11/05/2018
+Project File Date:  11/06/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BM_fw'
-compiling stm32f7xx_it.c...
+compiling fifo.c...
 linking...
-Program Size: Code=28608 RO-data=736 RW-data=332 ZI-data=289708  
+Program Size: Code=28572 RO-data=736 RW-data=328 ZI-data=288272  
 FromELF: creating hex file...
 "BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
 
@@ -49,7 +49,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.0
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:10
 </pre>
 </body>
 </html>
