--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -27,14 +27,18 @@ Project File Date:  11/06/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BM_fw'
-compiling usbd_audio_if.c...
-compiling usb_device.c...
-compiling stm32f7xx_it.c...
-compiling usbd_audio.c...
+compiling fifo.c...
+..\Src\fifo.c(7): warning:  #177-D: variable "packet_wr"  was declared but never referenced
+  static int packet_wr = 0, packet_rd = 0, sample_wr = 0;
+..\Src\fifo.c(7): warning:  #177-D: variable "packet_rd"  was declared but never referenced
+  static int packet_wr = 0, packet_rd = 0, sample_wr = 0;
+..\Src\fifo.c(7): warning:  #177-D: variable "sample_wr"  was declared but never referenced
+  static int packet_wr = 0, packet_rd = 0, sample_wr = 0;
+..\Src\fifo.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=28600 RO-data=736 RW-data=324 ZI-data=288268  
+Program Size: Code=28608 RO-data=736 RW-data=332 ZI-data=326636  
 FromELF: creating hex file...
-"BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
+"BM_fw\BM_fw.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -57,7 +61,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:23
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
