--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -28,17 +28,13 @@ Project File Date:  11/06/2018
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BM_fw'
 compiling fifo.c...
-..\Src\fifo.c(7): warning:  #177-D: variable "packet_wr"  was declared but never referenced
-  static int packet_wr = 0, packet_rd = 0, sample_wr = 0;
-..\Src\fifo.c(7): warning:  #177-D: variable "packet_rd"  was declared but never referenced
-  static int packet_wr = 0, packet_rd = 0, sample_wr = 0;
-..\Src\fifo.c(7): warning:  #177-D: variable "sample_wr"  was declared but never referenced
-  static int packet_wr = 0, packet_rd = 0, sample_wr = 0;
-..\Src\fifo.c: 3 warnings, 0 errors
+compiling stm32f7xx_it.c...
+compiling main.c...
+compiling usbd_audio.c...
 linking...
-Program Size: Code=28608 RO-data=736 RW-data=332 ZI-data=326636  
+Program Size: Code=28620 RO-data=736 RW-data=332 ZI-data=307468  
 FromELF: creating hex file...
-"BM_fw\BM_fw.axf" - 0 Error(s), 3 Warning(s).
+"BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -61,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:08
+Build Time Elapsed:  00:00:20
 </pre>
 </body>
 </html>
