--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -22,16 +22,27 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 C:\Users\User\Documents\BM_repo\BM_fw\MDK-ARM\BM_fw.uvprojx
-Project File Date:  11/06/2018
+Project File Date:  11/13/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BM_fw'
+compiling fifo.c...
 compiling stm32f7xx_it.c...
+compiling main.c...
+compiling usbd_audio.c...
+compiling fileSystem.c...
+..\Src\fileSystem.c(32): warning:  #550-D: variable "file_no"  was set but never used
+    int file_no = 0;
+..\Src\fileSystem.c(33): warning:  #177-D: variable "file_size"  was declared but never referenced
+    int file_size = 0, logs = 0;
+..\Src\fileSystem.c(33): warning:  #177-D: variable "logs"  was declared but never referenced
+    int file_size = 0, logs = 0;
+..\Src\fileSystem.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=29184 RO-data=736 RW-data=388 ZI-data=340364  
+Program Size: Code=29912 RO-data=736 RW-data=400 ZI-data=364416  
 FromELF: creating hex file...
-"BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
+"BM_fw\BM_fw.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +65,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:24
 </pre>
 </body>
 </html>
