--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -26,61 +26,12 @@ Project File Date:  12/07/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'BM_fw'
-assembling startup_stm32f767xx.s...
-compiling fifo.c...
+Build target 'BM_fw'
 compiling fileSystem.c...
-..\Src\fileSystem.c(32): warning:  #550-D: variable "file_no"  was set but never used
-    int file_no = 0;
-..\Src\fileSystem.c(33): warning:  #177-D: variable "file_size"  was declared but never referenced
-    int file_size = 0, logs = 0;
-..\Src\fileSystem.c(33): warning:  #177-D: variable "logs"  was declared but never referenced
-    int file_size = 0, logs = 0;
-..\Src\fileSystem.c: 3 warnings, 0 errors
-compiling main.c...
-compiling bsp_driver_sd.c...
-compiling sd_diskio.c...
-compiling fatfs.c...
-compiling usb_device.c...
-compiling usbd_conf.c...
-compiling usbd_desc.c...
-compiling usbd_audio_if.c...
-compiling stm32f7xx_it.c...
-compiling stm32f7xx_hal_msp.c...
-compiling stm32f7xx_hal_pcd.c...
-compiling stm32f7xx_hal_pcd_ex.c...
-compiling stm32f7xx_ll_usb.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_ll_sdmmc.c...
-compiling stm32f7xx_hal_sd.c...
-compiling stm32f7xx_hal_spi.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling system_stm32f7xx.c...
-compiling syscall.c...
-compiling diskio.c...
-compiling ff.c...
-compiling ff_gen_drv.c...
-compiling usbd_core.c...
-compiling usbd_ctlreq.c...
-compiling usbd_ioreq.c...
-compiling usbd_audio.c...
 linking...
-Program Size: Code=29796 RO-data=736 RW-data=396 ZI-data=364220  
+Program Size: Code=29908 RO-data=736 RW-data=400 ZI-data=364216  
 FromELF: creating hex file...
-"BM_fw\BM_fw.axf" - 0 Error(s), 3 Warning(s).
+"BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -103,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:03:08
+Build Time Elapsed:  00:00:09
 </pre>
 </body>
 </html>
