--- a/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
+++ b/BM_fw/MDK-ARM/BM_fw/BM_fw.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  12/07/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BM_fw'
-compiling fileSystem.c...
+compiling fifo.c...
 linking...
-Program Size: Code=29888 RO-data=736 RW-data=404 ZI-data=364220  
+Program Size: Code=29928 RO-data=736 RW-data=404 ZI-data=364220  
 FromELF: creating hex file...
 "BM_fw\BM_fw.axf" - 0 Error(s), 0 Warning(s).
 
